doc changes done

--- a/public/assets/css/product-researchs.css
+++ b/public/assets/css/product-researchs.css
@@ -246,6 +246,7 @@
 }
 .create-form-box .form-group select,
 .create-form-box .form-group input.form-control[type=number],
+.create-form-box .form-group input.form-control[type=email],
 .create-form-box .form-group input.form-control[type=url],
 .create-form-box .form-group input.form-control[type=text] {
   height: 3rem;
