--- a/public/assets/css/profile.css
+++ b/public/assets/css/profile.css
@@ -572,10 +572,12 @@
   box-shadow: 2px 2px 10px #f0eded;
 }
 .profile-update-page .profile-form .form-group .warning-txt {
-  display: block;
+  display: inline-block;
+  color: orange !important;
+  margin-left: 8rem;
 }
 .profile-update-page .profile-form .form-group #url_increment {
-  top: 0.5rem !important;
+  top: 0.8rem !important;
 }
 .profile-update-page .custom-hr hr {
   border: none;
@@ -646,6 +648,10 @@
 .profile-update-page #image-container #upload-label i {
   color: #ffffff;
   font-size: 1.4rem;
+}
+
+.feat-mt #url_increment {
+  top: 3.4rem !important;
 }
 
 @media (min-width: 320px) and (max-width: 574px) {
