--- a/public/assets/css/course.css
+++ b/public/assets/css/course.css
@@ -407,6 +407,16 @@
 .learning-banners-wrap .media {
   align-items: center;
 }
+.learning-banners-wrap .media .enrol-bttn {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #ffffff;
+  line-height: 140%;
+  background: #4c60ff;
+  display: inline-block;
+  padding: 0.85rem 1.5rem;
+  border-radius: 3rem;
+}
 .learning-banners-wrap .media .media-body .addspy-main-title {
   font-size: 3rem;
   font-weight: 600;
