--- a/public/dashboard-assets/css/dashboard.css
+++ b/public/dashboard-assets/css/dashboard.css
@@ -28,6 +28,9 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.04);
 }
 
+.dashboard-page-wrap .total-client-box {
+  height: 100%;
+}
 .dashboard-page-wrap .total-client-box .media {
   align-items: center;
 }
@@ -899,6 +902,27 @@
 .dashboard-page-wrap .dd {
   color: #09BD3C;
   color: #EAC947;
+}
+
+.digital-clock-box{
+  /* background: linear-gradient(132deg, #4c60ff 20%, #2b91fe); */
+  height: 100%;
+  font-family: 'Orbitron', sans-serif;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.digital-clock-box h5{
+  font-size: 1rem;
+  color: #171B1E;
+  text-align: left;
+  margin-bottom: 1rem;
+}
+.digital-clock-box #clock{
+  color: #171B1E;
+  font-size: 2.7rem;
 }
 
 @media (min-width: 320px) and (max-width: 575px) {
