--- a/scss/homepage.scss
+++ b/scss/homepage.scss
@@ -106,6 +106,8 @@
         width: 85%;
         display: block;
         margin: 0 auto;
+        max-height: 360px;
+        object-fit: cover;
     }
 }
 
