--- a/public/dashboard-assets/css/dashboard.css
+++ b/public/dashboard-assets/css/dashboard.css
@@ -29,7 +29,7 @@
 }
 
 .dashboard-page-wrap .total-client-box {
-  height: 100%;
+  height: 9rem
 }
 .dashboard-page-wrap .total-client-box .media {
   align-items: center;
@@ -977,8 +977,7 @@
 @media (min-width: 575px) and (max-width: 767px) {
   .dashboard-page-wrap .card-box {
     margin-top: 0rem !important;
-    margin-bottom: 1rem !important;
-    height: auto;
+    margin-bottom: 1rem !important; 
   }
 
   .dashboard-page-wrap .try-now-box {
@@ -1026,8 +1025,7 @@
 @media (min-width: 767px) and (max-width: 991px) {
   .dashboard-page-wrap .card-box {
     margin-top: 0rem !important;
-    margin-bottom: 1rem !important;
-    height: auto;
+    margin-bottom: 1rem !important; 
   }
 
   .dashboard-page-wrap .try-now-box {
@@ -1042,8 +1040,7 @@
 @media (min-width: 991px) and (max-width: 1199px) {
   .dashboard-page-wrap .card-box {
     margin-top: 0rem !important;
-    margin-bottom: 1.2rem !important;
-    height: auto;
+    margin-bottom: 1.2rem !important; 
   }
 
   .dashboard-page-wrap .try-now-box {
