--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -1,9 +1,11 @@
 .header-section {
-  padding: 1rem 1.5rem;
+  padding: 0.5rem 1.2rem;
+  padding-top: 0.8rem;
   background: linear-gradient(132deg, #4c60ff 20%, #2b91fe);
   position: fixed;
   width: 100%;
   z-index: 9999 !important;
+  height: 5rem;
 }
 
 .header-left-part {
@@ -21,7 +23,7 @@
 }
 .header-logo-wrap a img {
   width: 10rem;
-  min-height: 2rem;
+  min-height: 3rem;
   -o-object-fit: cover;
      object-fit: cover;
 }
