--- a/scss/header.scss
+++ b/scss/header.scss
@@ -3,13 +3,13 @@
 @use './util/media-query' as q;
 
 .header-section {
-    padding: 1rem 1.5rem;
-    // box-shadow: v.$mbxs;
-    background: v.$gdbg;
-    // background-image: url('../images/header-bg.png');
+    padding: 0.5rem 1.2rem;
+    padding-top: 0.8rem; 
+    background: v.$gdbg; 
     position: fixed;
     width: 100%;
     z-index: 9999!important;
+    height: 5rem;
 }
 
 .header-left-part {
@@ -23,7 +23,7 @@
         display: inline-block;
         img{
             width: 10rem;
-            min-height: 2rem;
+            min-height: 3rem;
             object-fit: cover
         }
     }
