--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -22,10 +22,11 @@
   display: inline-block;
 }
 .header-logo-wrap a img {
-  width: 12rem;
+  max-width: 12rem;
   min-height: 3rem;
   -o-object-fit: cover;
      object-fit: cover;
+  max-height: 3.4rem;
 }
 
 .header-search-wrap {
