--- a/scss/common.scss
+++ b/scss/common.scss
@@ -426,3 +426,85 @@
     @include m.button(1rem,v.$light,v.$gdbg);
     border-radius: 3rem;
 }
+
+#file-upload3,
+#file-upload2,
+#file-upload {
+    opacity: 0;
+    height: 0;
+}
+
+#image-input3,
+#image-input2,
+#image-input {
+    display: none;
+}
+
+#uploaded-image3,
+#uploaded-image2,
+#uploaded-image {
+    position: relative;
+    display: none;
+}
+
+#uploaded-image-name3,
+#uploaded-image-name2,
+#uploaded-image-name {
+    @include m.para(1rem, 500, v.$btnbg);
+    margin-left: 1rem;
+}
+
+#close-icon3,
+#close-icon2,
+#close-icon {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    font-size: 20px;
+    color: red;
+    cursor: pointer;
+}
+
+
+#uploaded-image-preview3,
+#uploaded-image-preview2,
+.static-image3,
+.static-image2,
+#uploaded-image-preview,
+.static-image {
+    width: 22rem;
+    height: 8rem;
+    border-radius: 2%;
+    object-fit: contain;
+}
+
+
+#image-container3,
+#image-container2,
+#image-container {
+    position: relative;
+    display: inline-block;
+    margin-top: 1rem;
+
+    #upload-label3,
+    #upload-label2,
+    #upload-label {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 2.4rem;
+        height: 2.5rem;
+        border-radius: 4rem;
+        background: v.$gdbg;
+        cursor: pointer;
+        position: absolute;
+        right: 0;
+        top: 60px;
+        z-index: 99;
+
+        i {
+            color: v.$light;
+            font-size: 1.4rem;
+        }
+    }
+}
