--- a/public/assets/css/common.css
+++ b/public/assets/css/common.css
@@ -532,3 +532,11 @@
   color: #ffffff;
   font-size: 1.4rem;
 }
+
+@media (min-width: 320px) and (max-width: 574px) {
+  #uploaded-image-preview3,
+  #uploaded-image-preview2,
+  .static-image3, .static-image2, #uploaded-image-preview, .static-image {
+    width: 17rem !important;
+  }
+}
