--- a/public/latest/assets/css/style.css
+++ b/public/latest/assets/css/style.css
@@ -94,7 +94,7 @@ p {
 }
 
 body {
-  background-color: #fff;
+  background-color: #F9FAFB;
   overflow-x: hidden;
   font-family: "Inter", sans-serif;
 }
